; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_scan.c_wpa_supplicant_set_default_scan_ies.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/wpa_supplicant/extr_scan.c_wpa_supplicant_set_default_scan_ies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_supplicant = type { i64, i32 }
%struct.wpabuf = type { i32 }

@WPA_IF_STATION = common dso_local global i32 0, align 4
@OCE_STA = common dso_local global i32 0, align 4
@P2P_GROUP_INTERFACE_CLIENT = common dso_local global i64 0, align 8
@WPA_IF_P2P_CLIENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wpa_supplicant_set_default_scan_ies(%struct.wpa_supplicant* %0) #0 {
  %2 = alloca %struct.wpa_supplicant*, align 8
  %3 = alloca %struct.wpabuf*, align 8
  %4 = alloca [18 x i32], align 16
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.wpa_supplicant* %0, %struct.wpa_supplicant** %2, align 8
  store %struct.wpabuf* null, %struct.wpabuf** %3, align 8
  %7 = load i32, i32* @WPA_IF_STATION, align 4
  store i32 %7, i32* %6, align 4
  %8 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %2, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @wpa_drv_get_ext_capa(%struct.wpa_supplicant* %8, i32 %9)
  %11 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %2, align 8
  %12 = getelementptr inbounds [18 x i32], [18 x i32]* %4, i64 0, i64 0
  %13 = call i32 @wpas_build_ext_capab(%struct.wpa_supplicant* %11, i32* %12, i32 72)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = icmp sgt i32 %14, 0
  br i1 %15, label %16, label %25

16:                                               ; preds = %1
  %17 = load i32, i32* %5, align 4
  %18 = call i64 @wpabuf_resize(%struct.wpabuf** %3, i32 %17)
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %16
  %21 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %22 = getelementptr inbounds [18 x i32], [18 x i32]* %4, i64 0, i64 0
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @wpabuf_put_data(%struct.wpabuf* %21, i32* %22, i32 %23)
  br label %25

25:                                               ; preds = %20, %16, %1
  %26 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %27 = icmp ne %struct.wpabuf* %26, null
  br i1 %27, label %28, label %35

28:                                               ; preds = %25
  %29 = load %struct.wpa_supplicant*, %struct.wpa_supplicant** %2, align 8
  %30 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %31 = call i32 @wpabuf_head(%struct.wpabuf* %30)
  %32 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %33 = call i32 @wpabuf_len(%struct.wpabuf* %32)
  %34 = call i32 @wpa_drv_set_default_scan_ies(%struct.wpa_supplicant* %29, i32 %31, i32 %33)
  br label %35

35:                                               ; preds = %28, %25
  %36 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %37 = call i32 @wpabuf_free(%struct.wpabuf* %36)
  ret void
}

declare dso_local i32 @wpa_drv_get_ext_capa(%struct.wpa_supplicant*, i32) #1

declare dso_local i32 @wpas_build_ext_capab(%struct.wpa_supplicant*, i32*, i32) #1

declare dso_local i64 @wpabuf_resize(%struct.wpabuf**, i32) #1

declare dso_local i32 @wpabuf_put_data(%struct.wpabuf*, i32*, i32) #1

declare dso_local i32 @wpa_drv_set_default_scan_ies(%struct.wpa_supplicant*, i32, i32) #1

declare dso_local i32 @wpabuf_head(%struct.wpabuf*) #1

declare dso_local i32 @wpabuf_len(%struct.wpabuf*) #1

declare dso_local i32 @wpabuf_free(%struct.wpabuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
